@@ -4756,6 +4756,16 @@ create the poison.  After that, the poison may be applied, where \
 it will persist for a short time on weapons, and forever on food \
 and drink.
 
+USE_POTION=THIEF_POTION
+THIEF_POTION=<ABILITY>\
+Usage    : USEPOTION [ITEM NAME] [POTION NAME]\n\r\
+Example  : poison sword "potion of cause light wounds"\n\r\
+Example  : poison waterskin "potion of cause light wounds"\n\r\
+This allows the player to apply a potion to a weapon, food, or drink with a \
+pre-prepared magical or divine potion as a source.  \
+It will persist for a short time on weapons, and forever on food \
+and drink.
+
 FIGHTER_VICIOUS_BLOW=FIGHTER_VICIOUSBLOW
 FIGHTER_VICIOUSBLOW=<ABILITY>\
 The warrior is capable of more crippling blows due to growing up \
