@@ -44,6 +44,7 @@
  42. New mood: reflective
  43. Factions can now be set as being non-inheritable by children
  44. New prayers: Planar Pilgrimage
+ 45. New Thief skills: Use Potion
  
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
